--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>JSTCK</title>
-    <link rel="stylesheet" href="style.5d92b2321828b421a099.css?e439f94ab8535449c543">
+    <link rel="stylesheet" href="style.877aae5d0e53019548fe.css?db05d99ea2de1bc0248e">
 </head>
 <body>
 <div class="root">
@@ -15,13 +15,13 @@
         <div class="header__wrapper">
             <nav class="header__menu">
                 <ul class="header__menu-list">
-                    <li class="header__menu-item"><a class="header__menu-link" href="#service">Как это работает</a></li>
-                    <li class="header__menu-item"><a class="header__menu-link" href="#reviews">Наши клиенты</a></li>
-                    <li class="header__menu-item"><a class="header__menu-link" href="#rates">Тарифы</a></li>
-                    <li class="header__menu-item"><a class="header__menu-link" href="#about">О компании</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link anchor" href="#service">Как это работает</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link anchor" href="#reviews">Наши клиенты</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link anchor" href="#rates">Тарифы</a></li>
+                    <li class="header__menu-item"><a class="header__menu-link anchor" href="#about">О компании</a></li>
                 </ul>
             </nav>
-            <a href="#application" class="header__application button">Оставить заявку</a>
+            <a href="#"class="header__application button scroll">Оставить заявку</a>
         </div>
     </header>
     <main class="main">
@@ -30,7 +30,7 @@
                 <div class="service__text-container">
                     <h1 class="service__title">Увеличьте ваши продажи на маркеплейсах<br> на 30%</h1>
                     <p class="service__description">Сервис аналитики для продавцов торгующих через Wildberries, Lamoda, Ozon и другие.</p>
-                    <a href="#application" class="service__application button">Оставить заявку</a>
+                    <a href="#" class="service__application button scroll">Оставить заявку</a>
                 </div>
                 <ul class="service__partners-list">
                     <li class="service__partners-item">
@@ -51,7 +51,7 @@
                 </ul>
             </div>
         </section>
-        <section class="promo" id="service">
+        <section class="promo section-scroll" id="service">
             <h2 class="promo__title">Увеличить продажи на 30%?<br> Да, это возможно.</h2>
             <ul class="promo__list">
                 <li class="promo__item">
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </section>
-        <section class="reviews" id="reviews">
+        <section class="reviews section-scroll" id="reviews">
             <h2 class="reviews__title">Клиенты и отзывы</h2>
             <ul class="reviews__list">
                 <li class="reviews__item">
@@ -97,7 +97,7 @@
                 </li>
             </ul>
         </section>
-        <section class="rates" id="rates">
+        <section class="rates section-scroll" id="rates">
             <h2 class="rates__title">Тарифы</h2>
             <div class="rates__wrapper">
                 <ul class="rates__list">
@@ -140,10 +140,10 @@
                         </div>
                     </li>
                 </ul>
-                <a href="#application" class="rates__btn button">Оставить заявку</a>
+                <a href="#" class="rates__btn button scroll">Оставить заявку</a>
             </div>
         </section>
-        <section class="about" id="about">
+        <section class="about section-scroll" id="about">
             <div class="about__wrapper">
                 <img class="about__image" src="./images/people-2.png" alt="о компании">
                 <div class="about__description about__description--individual">
@@ -261,6 +261,6 @@
         </div>
     </footer>
 </div>
-<script src="main.21447abed96d8eee7cc1.js?e439f94ab8535449c543"></script>
+<script src="main.eafad2132739670f8f86.js?db05d99ea2de1bc0248e"></script>
 </body>
 </html> 
